--- a/index.html
+++ b/index.html
@@ -7,12 +7,50 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="header">
+    <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section"
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML elements work together to build a framework for a webpage.</li>
+          <li>Elements are usually of an opening and closing tag represented with angle brackets &lt; &gt;. </li>
+          <li>Meta elements are usually not seen by the end user, one exception is the "title" element.</li>
+          <li>The "head" element contains information about the webpage.</li>
+          <li>The "body" element represents the visible content shown to the user</li>
+          <li>HTML elements are case sensitive.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section"
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section"
+        <h2>Git</h2>
+        <ul>
+          <li>git init: initializes local directory as new git repository.</li>
+          <li>git status: checks what branch we are currently on.</li>
+          <li>git diff: shows you the changes in your unstaged code.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+          <li>git add file-path/name-of-file: takes all unstaged work from a specific file and stages it, making it ready to be committed.</li>
+          <li>git commit -m "write commit message here": commits all staged work.  It's important to write a brief message on what is being committed.</li>
+          <li>git pull: pulls changes from your remote space.</li>
+          <li>git push: pushes changes to your remote space.</li>
+        </ul>
+      </section>
+      
+      <section class="card" id="javascript-section"
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
