--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
+
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
+    
     <main>
-      <section class="card" id="html-section"
+      <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
           <li>HTML elements work together to build a framework for a webpage.</li>
@@ -24,14 +27,19 @@
         </ul>
       </section>
 
-      <section class="card" id="css-section"
+      <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A CSS rule is divided into a selector and a declaration block</li>
+          <li>The selector defines the element or attribute to which the rules will apply</li>
+          <li>The declaration contains the CSS property to be applied and the value of the property</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>"Do Not Repeat Yourself" is a coding principle that reduces the overall complexity of a codebase</li>
         </ul>
       </section>
 
-      <section class="card" id="git-section"
+      <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
           <li>git init: initializes local directory as new git repository.</li>
@@ -45,7 +53,7 @@
         </ul>
       </section>
       
-      <section class="card" id="javascript-section"
+      <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
           <li>Enter your JavaScript notes here</li>
