fixed bug in js code

--- a/index.html
+++ b/index.html
@@ -57,7 +57,15 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>Control flow indicates that JavaScript files are executed from top to bottom.</li>
+          <li>Control flow can be interrupted when using conditional statements and loops.</li>
+          <li>A value is considered falsy if it is one of the following values: 0, -0, On, "", null, undefined, NaN, false.</li>
+          <li>A value is considered truthy if it is any other value, including true.</li>
+          <li>A function is a set of instructions that tells the computer how to perform a task.</li>
+          <li>Functions must defined and called to be executed.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Variables use the keyword 'const' or 'let'.</li>
+          <li>Using "inspect" from the rick-click drop down menu on a web site allows you to check the console.</li>
         </ul>
       </section>
     </main>
