--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li>The "body" element represents the visible content shown to the user</li>
           <li>HTML elements are case sensitive.</li>
         </ul>
+        <h3><a href="https://coding-boot-camp.github.io/full-stack/html/html-cheatsheet" target="_blank">HTML Cheatsheet</a></h3>
       </section>
 
       <section class="card" id="css-section">
@@ -52,6 +53,7 @@
           <li>git pull: pulls changes from your remote space.</li>
           <li>git push: pushes changes to your remote space.</li>
         </ul>
+        <h3><a href="https://coding-boot-camp.github.io/full-stack/git/getting-started-with-git" target="_blank">Getting Started with Git</a></h3>
       </section>
       
       <section class="card" id="javascript-section">
